<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lazarillo App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Posicion">Posición:</string>
    <string name="Situacion">Situación:</string>
    <string name="Maniobra">Próxima Maniobra:</string>
    <string name="ProxManiobra">Proxima Maniobra a Realizar</string>
    <string name="PosCalculada">Posición Calculada</string>
    <string name="SitConcreta">Situacion Concreta</string>
    <string name="SituacionActual">Situación Actual</string>
    <string name="direccion">Dirección:</string>
    <string name="introduceDireccion">Introduce Dirección</string>
    <string name="ciudad">Ciudad:</string>
    <string name="introduceCiudad">Introduce Ciudad</string>
    <string name="codigoPostal">CP:</string>
    <string name="IntroduceCP">Introduce CP</string>
    <string name="favoritos">Favoritos</string>
    <string name="nuevo">Nuevo</string>
    <string name="desde">Desde:</string>
    <string name="hasta">Hasta:</string>
    <string name="ir">IR</string>
    <string name="cancel">C</string>
    <string name="navegar">Navegar</string>
    <string name="incidencias">Incidencias</string>
    <string name="config">Configuración</string>
    <string name="aFavoritos">a Fav</string>
    <string name="aCasa">Casa</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="desarrolladores">Desarrolladores</string>
    <string name="santi">Santiago Hoyos Zea</string>
    <string name="fede">Federico Álvarez Campana</string>
    <string name="raul">Raúl Parra Cítores</string>
    <string name="yolanda">Yolanda Martín Téllez</string>
    <string name="colaboradores">Colaboradores</string>
    <string name="valentin_topografo">Valentin Arranz Escobar</string>

</resources>
