<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activitys.AboutActivity"

    android:orientation="vertical"
    android:background="#212121"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Acerca de...."
        android:id="@+id/textView6"
        android:textColor="#ffffff" />

    <ImageView
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_weight="0.19"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/desarrolladores"
        android:id="@+id/textView12"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="30dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/santi"
        android:id="@+id/textView8"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/fede"
        android:id="@+id/textView9"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/raul"
        android:id="@+id/textView10"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/yolanda"
        android:id="@+id/textView11"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/colaboradores"
        android:id="@+id/textView13"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:layout_marginTop="30dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valentin_topografo"
        android:id="@+id/textView14"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="#ffffff" />
</LinearLayout>
